<resources>
    <string name="app_name">Troll Master Malayalam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">About us</string>
    <string name="add_remove">Add/Remove Pages</string>
    <string name="sharetheapp">Share App with Friends</string>

    <string name="app_share_message">ഈ ട്രോള് ആപ്പ് ഉപയോഗിച്ചാൽ നിങ്ങൾ ഞെട്ടും !!\n https://goo.gl/WBWL6a</string>

    <!--Permission Related-->
    <string name="storage_permission_prompt_message">Storage permission needed</string>
    <string name="permission_prompt_settings_return">From settings</string>

    <!--FullScreen-->
    <string name="coming_soon">Coming Soon</string>

    <!--InternetConnectionChecker-->
    <string name="alert_internet_title">No Internet Connection</string>
    <string name="alert_internet_message">Troll Master requires Internet connection to work. Please check your connection and try again</string>

    <!--PlayVideo-->
    <string name="alert_video_wait_message">Please pause till video loads completely for viewing without interruption.</string>

    <!--Helper Methods-->
    <string name="helper_downloading">Downloading…</string>
    <string name="toast_whatsapp_not_found">Whatsapp not installed</string>
    <string name="intent_title_share_images">Share images…</string>
    <string name="intent_title_share">Share…</string>
    <string name="download_success">Downloaded Successfully</string>
    <string name="error">Error</string>
    <string name="unsupported_error">Unsupported Format Error</string>

    <!--Layout-->
    <string name="open_link_in_browser">Open Link in Browser</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="visitfb">View in FB</string>

    <!--PageNames-->
    <string name="pagename_icu">ICU-International Chalu Union</string>
    <string name="pagename_troll_malayalam">Troll Malayalam</string>
    <string name="pagename_troll_republic">Troll Republic</string>
    <string name="pagename_dank_memes_malayalam">Dank Memes Malayalam</string>
    <string name="pagename_school_college_trolls">School College Trolls</string>
    <string name="pagename_troll_cricket_malayalam">Troll Cricket Malayalam</string>
    <string name="pagename_troll_football_malayalam">Troll Football Malayalam</string>
    <string name="pagename_psc_trolls">PSC Trolls</string>
    <string name="pagename_b_tech_trolls">B-Tech Trolls</string>
    <string name="pagename_malayalam_naughty_trolls">Malayalam Naughty Trolls</string>
    <string name="pagename_outspoken">OutSpoken</string>
    <string name="pagename_troll_ktu">Troll KTU</string>
    <string name="pagename_kidilan_trolls">Kidilan Trolls</string>
    <string name="pagename_cinemamixer">CinemaMixer</string>
    <string name="pagename_troll_clashers_kerala">Troll Clashers Kerala</string>
    <string name="pagename_troll_mollywood">Troll MollyWood</string>
    <string name="pagename_sheru_entertainment_hub">Sheru Entertainment Hub</string>
    <string name="pagename_troll_malayalam_cinema">Troll Malayalam Cinema</string>
    <string name="pagename_troll_religion">Troll Religion</string>
    <string name="pagename_cyber_trollers">Cyber Trollers</string>
    <string name="pagename_pravasi_trolls">Pravasi Trolls</string>
    <string name="pagename_malayalam_troll_masters_mtm">Malayalam Troll Masters - MTM</string>
    <string name="pagename_thengakola">ThengaKola</string>
    <string name="pagename_troll_kerala">Troll Kerala</string>
    <string name="pagename_malayalam_pling">Malayalam Pling</string>
    <string name="pagename_online_troll_media_otm">Online Troll Media - OTM</string>
    <string name="pagename_trollsangh">Troll Sangh (സംഘി ഫലിതങ്ങൾ)</string>
    <string name="pagename_trollcompany">Troll Company - TC</string>

    <!--Settings-->
    <string name="aboutus">About Us</string>
    <string name="prefrence_rateapp_title">Let us know if you are enjoying!</string>
    <string name="preference_rateapp_dialogTitle">Rate Troll Master!</string>
    <string name="purchase_error">Error</string>
    <string name="purchase_already_owned">Error in purchase</string>
    <string name="captioninclude">Remove caption in shared message</string>
    <string name="captionsummarychecked">Troll text is added to shared message</string>
    <string name="captionsummaryunchecked">Troll text is not added to shared message</string>
    <string name="preference_addRemove_dialogTitle">Add/Remove Pages</string>

    <string name="exit_toast">മുതലാളീ..</string>
    <string name="settings_purchased_info">മുതലാളീ .. താങ്ക്യൂ ഉണ്ട് താങ്ക്യൂ. വീണ്ടും വീണ്ടും വാങ്ങാനുള്ള  മനസ്സ്.. </string>
    <string name="settings_purchase_cancel">മുതലാളീ ..</string>
    <string name="settings_purchase_success">നന്ദിയുണ്ട് മുതലാളീ .. നന്ദിയുണ്ട് .</string>
    <string name="downloadhelper_success">ഇതല്ലാ ഇതിൻറെ അപ്പുറം ഡൌൺലോഡ് ചെയ്തവനാണീ ട്രോൾ മാസ്റ്റർ </string>

</resources>
