<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/add_remove"
        android:key="addremove"
        android:title="@string/preference_addRemove_dialogTitle" />
    <CheckBoxPreference
        android:key="captioninclude"
        android:title="@string/captioninclude" />
    <Preference
        android:icon="@drawable/rate_black"
        android:key="rateus"
        android:summary="@string/prefrence_rateapp_title"
        android:title="@string/preference_rateapp_dialogTitle" />
    <Preference
        android:icon="@drawable/about"
        android:key="about"
        android:title="@string/aboutus" />
    <PreferenceCategory android:title="Support the Developer">
        <PreferenceScreen
            android:icon="@drawable/donate_black"
            android:key="donate"
            android:title="Remove the ADs" />
    </PreferenceCategory>
</PreferenceScreen>