<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/feed_bg"
    app:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/pagepic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

        <TextView
            android:id="@+id/source_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="Page name"
            android:textColor="@color/uvv_black"
            android:textSize="@dimen/feed_item_profile_name"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/pagepic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="Caption"
            android:textColor="@color/uvv_black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_page_name" />

        <TextView
            android:id="@+id/post_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:gravity="center"
            android:text="Link"
            android:textColor="@color/com_facebook_blue"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption" />

        <RelativeLayout
            android:id="@+id/piclayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/post_url">


            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:srcCompat="@drawable/jz_click_play_selector" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            app:layout_constraintTop_toBottomOf="@id/piclayout">

            <Button
                android:id="@+id/visitfb_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/visitfb" />

            <Button
                android:id="@+id/download_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/download" />

            <Button
                android:id="@+id/share_main_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/share" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>